--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             id="mycanvas"
             width="1200"
             height="550"
-            style="background-color: black"
+            style="background-color: #f0ffff"
         >
         </canvas>
     </body>
